#123 [root] Support jdk17+ build