@@ -42,7 +42,7 @@
     <java.version>7</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-<!--    <jvm.options>&#45;&#45;add-opens java.base/java.net=ALL-UNNAMED</jvm.options>-->
+    <jvm.options>--add-opens java.base/java.net=ALL-UNNAMED</jvm.options>
 
     <!-- Plugins -->
     <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
